<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInModeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/teacherLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/girisyapselector"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/ogretmen_girisi"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/studentLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/girisyapselector"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/ogrenci_girisi"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/adminLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/girisyapselector"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/admin_girisi"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>